uncomment add-opens config to allow cis jvm 8 to run it